--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ defaults: &defaults
   working_directory: ~/go-prometheus-heartbeat-exporter
   docker:
     - image: cimg/go:1.23
-
+    - image: cimg/postgres:16.4
+      environment:
+        POSTGRES_USER: postgres
 jobs:
   linters:
     docker:
@@ -31,10 +33,6 @@ jobs:
 
     steps:
       - checkout
-
-      - run:
-          name: Installing Gotestsum
-          command: go get gotest.tools/gotestsum
 
       - run:
           name: Running tests
