--- a/fixtures/config_with_env.yml
+++ b/fixtures/config_with_env.yml
@@ -7,6 +7,6 @@ metrics_route: '/metrics${METRICS_ROUTE}'
 instances:
   - name: 'postgres_1'
     connection: 'postgres'
-    url: 'postgres://localhost:5432/healthcheck_db'
+    url: 'postgres://localhost:5432/heartbeat_test'
     interval: 3
     timeout: 2
