--- a/.circleci/.goreleaser.yml
+++ b/.circleci/.goreleaser.yml
@@ -4,7 +4,7 @@ version: 2
 
 builds:
   - id: heartbeat-build
-    dir: cmd
+    dir: cmd/heartbeat
     binary: heartbeat
     env:
       - CGO_ENABLED=0
