Feature/Ability to provide custom instance queries
* Updated configuration, tests
* Updated instance, tests
* Updated session, tests
* Updated sessionPostgres, tests
* Updated test helpers, mocks
* Updated project documentation

--- a/fixtures/config.yml
+++ b/fixtures/config.yml
@@ -8,5 +8,6 @@ instances:
   - name: 'postgres_1'
     connection: 'postgres'
     url: 'postgres://localhost:5432/heartbeat_test'
+    query: 'CREATE TABLE tmp (id SERIAL PRIMARY KEY); DROP TABLE tmp'
     interval: 3
     timeout: 2
