--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ defaults: &defaults
   docker:
     - image: cimg/go:1.23
     - image: cimg/postgres:16.4
+    - image: cimg/redis:7.4
       environment:
         POSTGRES_USER: postgres
 jobs:
